--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,6 @@ python:
   - "3.7-dev"
 
 install:
-  - pip install -r requirments-test.txt
+  - pip install -r requirements-test.txt
 
 script: pytest --cov --verbose
