Pass dependencies to components on instantiation

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ python:
 install:
   - pip install -r requirements-test.txt
 
-script: pytest --cov --verbose
+script: pytest --cov ---cov-fail-under=50 -verbose
