Add pre-commit dev dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,7 +21,7 @@ show-source = true
 exclude = .tox,.eggs
 
 [pydocstyle]
-add_ignore = D1,D400
+add_ignore = D1,D400,D413
 match = (?!setup).*.py
 match-dir = (?!test|venv|docs|\.).*
 
