--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ whitelist_externals=sphinx-build
 
 [testenv]
 deps=
-    -rrequirements-dev.txt
+    -rrequirements-test.txt
 setenv =
     PYTHONPATH = {toxinidir}
 commands=
